--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "one-page-react-front-end-implementation",
   "version": "0.1.0",
   "private": true,
+  "homepage": "One-page-React-front-end-implementation/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
